--- a/video-piece.html
+++ b/video-piece.html
@@ -17,7 +17,7 @@
     <main>
       <div id="board">
           <!-- 这是一个scene -->
-          <div id="scene-start" class="scene">
+          <div id="scene-video1" class="scene">
             <div class="icon-close">
               <i class="fas fa-times-circle"></i>
             </div>
@@ -26,8 +26,6 @@
               <div class="kcexplain">
                <p3>self explanation1</p3>
               </div>
-
-
           </div>
 
 
