--- a/videohint.html
+++ b/videohint.html
@@ -17,7 +17,7 @@
     <main>
       <div id="board">
           <!-- 这是一个scene -->
-          <div id="scene-start" class="scene">
+          <div id="scene-explain" class="scene">
             <h3>Explain to your partner what you just learned</h3>
             <p2>You can read your own notes or look back to the corresponding video piece if you need.</p2>
             <div class="explanationline">
@@ -61,12 +61,9 @@
               </div>
             </div>
 
-            <a class="btn-continue" data-next="#scene-title-pasta">
+            <a class="btn-continue" data-next="#scene-listen">
 <!-- 点了button的目标 -->
               <i class="far fa-play-circle"></i>Continue</a>
-
-
-
           </div>
 
 
