--- a/knowledgehint.html
+++ b/knowledgehint.html
@@ -17,7 +17,7 @@
     <main>
       <div id="board">
           <!-- 这是一个scene -->
-          <div id="scene-start" class="scene">
+          <div id="scene-listen" class="scene">
             <h3>Now listen to your partner's explanation</h3>
             <p2>Pay attention to whether he/she has covered all the knowlege components below.</p2>
 
@@ -36,21 +36,14 @@
               <div class="kc">
                <p3>knowledge component4</p3>
               </div>
-
               <div class="kc">
                <p3>knowledge component5</p3>
               </div>
-
-
             <a class="btn-continue" data-next="#scene-title-pasta">
 <!-- 点了button的目标 -->
               <i class="far fa-play-circle"></i>Got Them</a>
-
-
-
           </div>
-
-
+</div>
 
 
 
