--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
             </div>
             <h2>Are You Ready?</h2>
             <p>This is a collaborative course about how microwaves work. You and your partner will be assigned to learn different knowlege related to the topic. After watching the video, you need to explain to your patner what you have learned, and also listen to your partner's explanation. After that, you will take test individually about all the knowlege covered. Click start to begin our wonderful journey!</p>
-            <a class="btn-continue" data-next="#scene-title-pasta">
-<!-- 点了button的目标 -->
-              <i class="far fa-play-circle"></i>Start</a>
+            <a class="btn-continue" data-next="#scene-title-pasta"><i class="far fa-play-circle"></i>Start</a>
           </div>
-<!-- 到这里 -->
 
           <div id="scene-end" class="scene">
             <div class="icon">
@@ -121,7 +118,6 @@
             <h2>Correct!</h2>
             <p>You chose the correct result. Let's watch the video and see if your explanation is right.</p>
             <a class="btn-end"><i class="fas fa-magic"></i>Check It Out</a>
-
           </div>
           <div id="scene-wrong-pasta" class="scene scene-feedback">
             <div class="icon icon-alert">
@@ -330,6 +326,7 @@
             <p>There is a common misconception that microwave ovens heat food from the inside out. However, actually microwaves heat all the water molecules in the food at the same time. So it heats all parts of the food at the same time.<br>It is the conventional oven that heats food by heating the air and conduct the heat from the outside of the food to the inside, not the microwave oven.</p>
             <a class="btn-continue" data-next="#scene-end"><i class="fas fa-arrow-circle-right"></i>Continue</a>
           </div>
+
           <!-- Explanation -->
           <div id="scene-explain" class="scene">
             <h3>Explain to your partner what you just learned</h3>
@@ -338,48 +335,46 @@
               <div class="self-explanation">
                <p3>explanation explanation explanation</p3>
               </div>
-              <div class="icon-play" data-next="#scene-video1">
+              <a class="icon-play" data-next="#scene-video1">
                 <i class="fas fa-play-circle"></i>
-              </div>
+              </a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3>explanation explanation explanation</p3>
               </div>
-              <div class="icon-play">
+              <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
-              </div>
+              </a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3 >explanation explanation explanation</p3>
               </div>
-              <div class="icon-play">
+              <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
-              </div>
+              </a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3>explanation explanation explanation</p3>
               </div>
-              <div class="icon-play">
+              <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
-              </div>
+              </a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3>explanation explanation explanation</p3>
               </div>
-              <div class="icon-play">
+              <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
-              </div>
+              </a>
             </div>
 
             <a class="btn-continue" data-next="#scene-listen">
               <i class="far fa-play-circle"></i>Continue</a>
           </div>
-        </div>
-<!-- listener -->
           <div id="scene-listen" class="scene">
             <h3>Now listen to your partner's explanation</h3>
             <p2>Pay attention to whether he/she has covered all the knowlege components below.</p2>
@@ -398,9 +393,7 @@
               <div class="kc">
                <p3>knowledge component5</p3>
               </div>
-            <a class="btn-continue" data-next="#scene-title-practice">
-<!-- 点了button的目标 -->
-              <i class="far fa-play-circle"></i>Got Them</a>
+            <a class="btn-continue" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
           </div>
 
           <!-- video piece 1 -->
@@ -414,6 +407,9 @@
                <p3>self explanation1</p3>
               </div>
           </div>
+
+
+        </div>
 
         <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
         <div id="player"></div>
