Success local storage
Add extract text function

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div id="scene-answer-pasta" class="scene scene-answer">
             <h2>Justify Your Answer</h2>
             <p>Why do you choose the option?</p>
-            <textarea class="input-answer" rows="4" placeholder="Explain why you think your answer is right."></textarea>
+            <textarea id="input-answer-kc1" class="input-answer" rows="4" placeholder="Explain why you think your answer is right."></textarea>
             <a class="btn-continue btn-disabled" data-next="#scene-wrong-pasta"><i class="fas fa-arrow-circle-right"></i>Continue</a>
           </div>
           <div id="scene-correct-pasta" class="scene scene-feedback">
@@ -333,7 +333,7 @@
             <p2>You can read your own notes or look back to the corresponding video piece if you need.</p2>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3>explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc1">explanation explanation explanation</p3>
               </div>
               <a class="icon-play" data-next="#scene-video1">
                 <i class="fas fa-play-circle"></i>
@@ -341,7 +341,7 @@
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3>explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc2">explanation explanation explanation</p3>
               </div>
               <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
@@ -349,7 +349,7 @@
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3 >explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc3">explanation explanation explanation</p3>
               </div>
               <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
@@ -357,7 +357,7 @@
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3>explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc4">explanation explanation explanation</p3>
               </div>
               <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
@@ -365,7 +365,7 @@
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3>explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc5">explanation explanation explanation</p3>
               </div>
               <a class="icon-play">
                 <i class="fas fa-play-circle"></i>
