Got self-explanation done!
Hahahahaha I feel very good!

--- a/index.html
+++ b/index.html
@@ -411,12 +411,38 @@
 
           <!-- 这里开始是前面每一kc的self-explanation -->
           <div id="scene-kc1" class="scene scene-answer">
-            <h2>What did you learnt?</h2>
+            <h2>What did you learn?</h2>
             <p>What is microwave?</p>
             <textarea id="input-answer-kc1" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <!-- <!!!!!!!!!!!!!IMPORTANT></!!!!!!!!!!!!!IMPORTANT> -->
             <a id = "btn-continue-kc1" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
-            <!-- <a class="btn-continue btn-disabled" data-next="#scene-wrong-pasta"><i class="fas fa-arrow-circle-right"></i>Continue</a> -->
+          </div>
+
+          <div id="scene-kc2" class="scene scene-answer">
+            <h2>What did you learn?</h2>
+            <p>What absorbs microwave and what does not? So microwave oven will heat what but will not heat what?</p>
+            <textarea id="input-answer-kc2" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+            <a id = "btn-continue-kc2" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+          </div>
+
+          <div id="scene-kc3" class="scene scene-answer">
+            <h2>What did you learn?</h2>
+            <p>Microwave ovens deliver cooking power primarily to what content in the food?</p>
+            <textarea id="input-answer-kc3" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+            <a id = "btn-continue-kc3" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+          </div>
+
+          <div id="scene-kc4" class="scene scene-answer">
+            <h2>What did you learn?</h2>
+            <p>Why do containers not get as hot as food inside them?</p>
+            <textarea id="input-answer-kc4" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+            <a id = "btn-continue-kc4" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+          </div>
+
+          <div id="scene-kc5" class="scene scene-answer">
+            <h2>What did you learn?</h2>
+            <p>Why you shouldn't use metal plates or foils in microwave ovens?</p>
+            <textarea id="input-answer-kc5" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+            <a id = "btn-continue-kc5" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
 
