--- a/learner1.html
+++ b/learner1.html
@@ -231,20 +231,20 @@ You may need to review your notes or the video before explaining to your partner
             <h2 id="exam-question">Question 1</h2>
             <p id="problem-statement">Microwaves are electric waves that could NOT penetrate?</p>
             <div class="gallery gallery-v select" data-target="#scene-question-1">
-              <div id ="optionA" class="frame option" data-next="#scene-question-1">
+              <div id ="optionA" class="frame option option-q" data-next="#scene-question-1">
                 <p>A. Food</p>
               </div>
-              <div id ="optionB" class="frame option" data-next="#scene-question-1">
+              <div id ="optionB" class="frame option option-q" data-next="#scene-question-1">
                 <p>B. Ceramics</p>
               </div>
-              <div id ="optionC" class="frame option" data-next="#scene-question-1">
+              <div id ="optionC" class="frame option option-q" data-next="#scene-question-1">
                 <p>C. Glass</p>
               </div>
-              <div id ="optionD" class="frame option" data-next="#scene-question-1">
+              <div id ="optionD" class="frame option option-q" data-next="#scene-question-1">
                 <p>D. Metal</p>
               </div>
             </div>
-            <a id="btn-continue-exam" class="btn-continue btn-disabled" data-next="#scene-question-1"><i class="fas fa-arrow-circle-right"></i>Continue</a>
+            <a id="btn-continue-exam" class="btn-continue-q btn-disabled" data-next="#scene-question-1"><i class="fas fa-arrow-circle-right"></i>Continue</a>
           </div>
           <!-- 到这里 -->
 
