--- a/learner1.html
+++ b/learner1.html
@@ -37,9 +37,13 @@
             <h2>Congratulation!!!</h2>
 <!--             <p>You have completed the course. Now you can show off to your friends how a microwave oven works!</p> -->
             <p >You got <span id="final-score">76 </span> points in total</p>
-            <a class="btn-continue" data-next=""><i class="fas fa-arrow-circle-right"></i>Feedback</a>
+            <a class="btn-continue" data-next="#scene-feedback"><i class="fas fa-arrow-circle-right"></i>Feedback</a>
 <!--             <a class="btn-share"><i class="fab fa-twitter"></i>Share</a>
  -->          </div>
+          <div id = "scene-feedback" class="scene">
+            <p id="feedback-text">feedbacktext</p> 
+            <a class="btn-continue-q" data-next="#scene-feedback"><i class="fas fa-arrow-circle-right"></i>next</a>
+          </div>
 
 <!-- Experiment 1 -->
           <div id="scene-title-pasta" class="scene scene-title">
